tests/NormalTests/paczka1/fuzzy1/54232802.err
Error in line 3: ppsBeLy S717 79,6
Error in line 13: ppsBeLy S85 130,8
Error in line 22: zk S162 12,3
Error in line 25: Mwy2suEo S69 92,3
Error in line 39: ppsBeLy S717 41,1
